Add graph ql support and more logging
